--- a/demoProject2_new/src/main/resources/templates/example/ex1.html
+++ b/demoProject2_new/src/main/resources/templates/example/ex1.html
@@ -147,5 +147,7 @@
             </tbody>
         </table>
 
+        <th:block th:replace="~{fragments/footer}"></th:block>
+
     </body>
 </html>
