--- a/demoProject2_new/src/main/resources/templates/example/ex2.html
+++ b/demoProject2_new/src/main/resources/templates/example/ex2.html
@@ -97,5 +97,7 @@
             (옆에 작성된 값을 이용해서 src 속성 추가) -->
          <img th:src="#{user.default.image}" style="width: 40%;">
 
+         <th:block th:replace="~{fragments/footer}"></th:block>
+
     </body>
 </html>
