--- a/todoList-boot/src/main/resources/templates/common/main.html
+++ b/todoList-boot/src/main/resources/templates/common/main.html
@@ -68,6 +68,7 @@
             조각의 경로는 forward 하듯이 접두사, 접미사 생략하고 작성    
         -->
         <th:block th:replace="~{common/footer}"></th:block>
+                            <!-- templates 기준 -->
 
     </body>
 </html>
