--- a/boardProject-boot/src/main/resources/templates/myPage/myPage-fileTest.html
+++ b/boardProject-boot/src/main/resources/templates/myPage/myPage-fileTest.html
@@ -46,6 +46,7 @@
             문자열 -> String
             숫자   -> String -> int/double(Spring이 처리)
             파일   -> 2진 데이터
+            <!-- body 에 담아서 전달 -->
 
           * text/plain
            - 텍스트로 서버에 제출
@@ -55,7 +56,7 @@
 
         <!-- 
           GET 사용 가능, 단 권장 X 
-          ->
+          -> 보안, 길이 제한 문제
         -->
 
      	
@@ -69,6 +70,7 @@
             -> @RequestParam 으로 처리 가능
           -->
           <input type="file" name="uploadFile">
+                                    <!-- multiple 속성 추가시 파일 여러개 선택 가능 -->
 
           <button class="myPage-submit">제출하기</button>
         </form>
@@ -81,6 +83,58 @@
             th:text="${path}"
             th:href="${path}"
             download>업로드한 파일</a>
+
+        <img th:src="${path}">
+        <!-- /myPage/file/아바타 -->
+
+
+        <hr>
+
+        <form action="/myPage/file/test2"
+              method="POST"
+              enctype="multipart/form-data">
+          <h3>파일 업로드 + DB 저장 + 조회</h3>
+
+          <input type="file" name="uploadFile">
+
+
+          <button class="myPage-submit">제출하기</button>
+        </form>
+
+        <hr>
+
+
+        <form action="/myPage/file/test3" 
+              method="POST" 
+              enctype="multipart/form-data">
+
+          <h3>여러 파일 업로드</h3>
+
+          <pre>
+            1) 같은 name 속성을 가지는 type="file" 요소를 여러개 작성
+            
+            2) multiple 속성 이용
+          </pre>
+
+          <div>
+            1번) type="file" 요소를 여러 개 작성
+            <br>
+            <input type="file" name="aaa">
+            <br>
+            <input type="file" name="aaa">
+          </div>
+
+          <hr>
+
+          <div>
+            2번) multiple 사용(드래그 가능)
+            <br>
+            <input type="file" name="bbb" multiple>
+          </div>
+
+          <button class="myPage-submit">제출하기</button>
+
+        </form>
 
 
       </section>
