--- a/boardProject-boot/src/main/resources/templates/board/boardList.html
+++ b/boardProject-boot/src/main/resources/templates/board/boardList.html
@@ -66,7 +66,15 @@
 									<!-- 썸네일 추가 예정 -->
 
 									<!-- 상세 조회 주소에 cp 가 포함된 이유 : 상세 -> 목록으로 돌아올 때 사용 -->
-									<a th:href="@{/board/{boardCode}/{boardNo} (boardCode=${boardCode}, boardNo=*{boardNo}, cp=${pagination.currentPage})}" 
+
+									<!-- 검색 X -->
+									<a th:unless="${param.key}"
+									   th:href="@{/board/{boardCode}/{boardNo} (boardCode=${boardCode}, boardNo=*{boardNo}, cp=${pagination.currentPage})}" 
+									   th:text="*{boardTitle}">게시글 제목</a>
+
+									<!-- 검색 O -->
+									<a th:if="${param.key}"
+									   th:href="@{/board/{boardCode}/{boardNo} (boardCode=${boardCode}, boardNo=*{boardNo}, cp=${pagination.currentPage}, key=${param.key}, query=${param.query})}" 
 									   th:text="*{boardTitle}">게시글 제목</a>
 
 									<th:block th:text="|[*{commentCount}]|">댓글 수</th:block>
@@ -83,7 +91,7 @@
 								<td th:text="*{readCount}">0</td>
 
 								<!-- 좋아요 수 -->
-								<td th:text="${likeCount}">0</td>
+								<td th:text="*{likeCount}">0</td>
 
 							</tr>
 
@@ -107,7 +115,8 @@
 			<!-- 게시글이 있을 때만 페이지네이션이 보이게 할 예정 -->
 			<div class="pagination-area">
 
-				<ul class="pagination" th:object="${pagination}">
+				<!-- 일반 목록 조회 (검색 X) -->
+				<ul class="pagination" th:unless="${param.key}" th:object="${pagination}">
 
 					<!-- 첫 페이지로 이동 -->
 					<li><a th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=1)}">&lt;&lt;</a></li>
@@ -140,13 +149,63 @@
 					<!-- 끝 페이지로 이동 -->
 					<li><a th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=*{maxPage})}">&gt;&gt;</a></li>
 				</ul>
+
+				<!-- ------------------------------------------------------------------------------------------------------------- -->
+
+				<!-- 검색인 경우 -->
+				<ul class="pagination" th:if="${param.key}" th:object="${pagination}">
+
+					<!-- 첫 페이지로 이동 -->
+					<li><a th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=1, key=${param.key}, query=${param.query})}">&lt;&lt;</a></li>
+
+					<!-- 이전 목록 마지막 번호로 이동 -->
+					<li><a th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=*{prevPage}, key=${param.key}, query=${param.query})}">&lt;</a></li>
+
+					<!-- 특정 페이지로 이동 -->
+					<th:block th:if="*{startPage lt endPage}" th:each="i : *{#numbers.sequence(startPage, endPage)}">
+						
+					<!-- 현재 보고있는 페이지 -->
+						<li th:if="${i} == *{currentPage}">
+							<a class="current" th:text="${i}">현재 페이지</a>
+						</li>
+						
+						<!-- 보고있지 않은 페이지 -->
+						<li th:unless="${i} == *{currentPage}">
+							<a th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=${i}, key=${param.key}, query=${param.query})}"
+							   th:text="${i}">이동할 페이지</a>
+						</li>
+
+					</th:block>
+
+					<!-- 일치하는 게시글이 없을 겨우 -->
+					<th:block th:unless="*{startPage lt endPage}">
+
+						<li>
+							<a class="current">1</a>
+						</li>
+
+					</th:block>
+
+
+					
+					<!-- 다음 목록 시작 번호로 이동 -->
+					<li><a th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=*{nextPage}, key=${param.key}, query=${param.query})}">&gt;</a></li>
+
+					<!-- 끝 페이지로 이동 -->
+					<li><a th:href="@{/board/{boardCode}(boardCode=${boardCode}, cp=*{maxPage}, key=${param.key}, query=${param.query})}">&gt;&gt;</a></li>
+				</ul>
 			</div>
 
 
 
 			<!-- 검색창 -->
-			<form action="#" method="get" id="boardSearch">
+			<!-- 
+				현재 : /board/1 
+				목표 : /board/1?key=w&query=검색내용
+			-->
+			<form th:action="@{{boardCode}(boardCode=${boardCode})}" method="get" id="boardSearch">
 
+				<!-- ex) ?key=c&query=검색내용 -->
 				<select name="key" id="searchKey">
 					<option value="t">제목</option>
 					<option value="c">내용</option>
