--- a/boardProject-boot/src/main/resources/templates/common/main.html
+++ b/boardProject-boot/src/main/resources/templates/common/main.html
@@ -8,6 +8,9 @@
   <!-- templates/common/common.html 조각으로 추가 -->
   <th:block th:replace="~{common/common.html}"></th:block>
 
+  <script type="text/javascript" src="https://static.nid.naver.com/js/naverLogin_implicit-1.0.3.js" charset="utf-8"></script>
+  <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+
 </head>
 <body>
 
@@ -54,6 +57,11 @@
           <input type="text" id="resetMemberNo">
           <button id="resetPw">비밀번호 pass01! 로 초기화</button>
         </div>
+
+        <br>
+
+        <!-- 네이버 로그인 버튼 노출 영역 -->
+        <div id="naver_id_login"></div>
 
         <hr>
 
@@ -158,7 +166,26 @@
 
   <th:block th:replace="~{common/footer.html}"></th:block>
 
+  <!-- 
+    RWuwwjxQBstEt84OSjVC
+    http://localhost/call-back
+   -->
+
+  <script type="text/javascript">
+    var naver_id_login = new naver_id_login("RWuwwjxQBstEt84OSjVC", "http://localhost:5500/src/main/resources/templates/common/call-back.html");
+    var state = naver_id_login.getUniqState();
+    naver_id_login.setButton("white", 3, 40);
+    naver_id_login.setDomain("http://localhost/");
+    naver_id_login.setState(state);
+    naver_id_login.setPopup();  // 팝업을 통한 연동처리 여부
+    naver_id_login.init_naver_id_login();
+
+    console.log(naver_id_login);
+  </script>
+
+
   <script src="/js/main.js"></script>
+
 
 </body>
 </html>
