--- a/boardProject-boot/src/main/resources/templates/common/header.html
+++ b/boardProject-boot/src/main/resources/templates/common/header.html
@@ -52,6 +52,10 @@
           th:href="@{/board/{boardCode}(boardCode = ${boardType.boardCode})}">게시판 이름</a>
         </li>
       </th:block>
+
+      <li class="chatting-li">
+        <a th:href="@{/chatting/list}" th:text="채팅">채팅</a>
+      </li>
     </ul>
   </nav>
   
