--- a/boardProject-boot/src/main/resources/templates/common/main.html
+++ b/boardProject-boot/src/main/resources/templates/common/main.html
@@ -172,7 +172,7 @@
    -->
 
   <script type="text/javascript">
-    var naver_id_login = new naver_id_login("RWuwwjxQBstEt84OSjVC", "http://localhost:5500/src/main/resources/templates/common/call-back.html");
+    var naver_id_login = new naver_id_login("RWuwwjxQBstEt84OSjVC", "http://localhost/");
     var state = naver_id_login.getUniqState();
     naver_id_login.setButton("white", 3, 40);
     naver_id_login.setDomain("http://localhost/");
